#618 Added test coverage for MoralDay2Cutscene.java